[package]
name = "fibonacci-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.86"
js-sys = "0.3"
dashu = { version = "0.4.2", features = ["serde"] }
fast-fibonacci = "0.2.0"
[dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'Window',
  'HtmlCanvasElement',
  'WebGlRenderingContext',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'WebGlBuffer',
  'WebGlUniformLocation',
]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
